--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
-
-    "name": "SDIS62/prevarisc",
+    "name": "sdis62/prevarisc",
 
     "description": "Application web open-source gérant l'ensemble de l'activité du service prévention au sein d'un SDIS.",
 
@@ -12,15 +11,15 @@
 
     "homepage": "https://github.com/SDIS62/prevarisc",
 
-    "license": "CeCILL-B",
+    "license": "CECILL-B",
 
     "require": {
-        "php": "^5.5|^7.0",
+        "php": "^7.0",
         "zendframework/zendframework1": "^1.0",
         "cybermonde/odtphp": "^1.0",
         "michelf/php-markdown": "^1.0",
         "kdubuc/gd_resize": "^1.0",
-        "SDIS62/toolbox": "dev-master",
+        "sdis62/toolbox": "dev-master",
         "sebastian/git": "^2.0",
         "sabre/vobject": "~4",
         "jasig/phpcas": "^1.3"
@@ -28,7 +27,6 @@
 
     "require-dev": {
         "phpunit/phpunit": "^4.0",
-        "fabpot/PHP-CS-Fixer": "^1.0"
+        "fabpot/php-cs-fixer": "^1.0"
     }
-
 }
