--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "sebastian/git": "^2.0",
         "sabre/vobject": "~4",
         "jasig/phpcas": "^1.3",
-        "phpoffice/phpexcel": "^1.8"
+        "phpoffice/phpexcel": "^1.8",
+        "hellosign/hellosign-php-sdk": "^3.6"
     },
 
     "require-dev": {
