--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,6 @@
 
     "require-dev": {
         "phpunit/phpunit": "^4.0",
-        "fabpot/php-cs-fixer": "^1.0"
+        "friendsofphp/php-cs-fixer": "2.10.5"
     }
 }
