--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,6 @@
 
     "require-dev": {
         "phpunit/phpunit": "^4.0",
-        "friendsofphp/php-cs-fixer": "~2.10.0"
+        "friendsofphp/php-cs-fixer": "2.19.3"
     }
 }
