--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,12 @@
         "sebastian/git": "^2.0",
         "sabre/vobject": "~4",
         "jasig/phpcas": "^1.3",
-        "phpoffice/phpexcel": "^1.8"
+        "phpoffice/phpexcel": "^1.8",
+        "catoth/html2opendocument": "^0.15.0"
     },
 
     "require-dev": {
         "phpunit/phpunit": "^4.0",
-        "friendsofphp/php-cs-fixer": "~2.10.0"
+        "friendsofphp/php-cs-fixer": "3.3.0"
     }
 }
