--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "sabre/vobject": "~4",
         "jasig/phpcas": "^1.3",
         "phpoffice/phpexcel": "^1.8",
-        "catoth/html2opendocument": "^0.15.0"
+        "kranemora/html2text": "^1.0"
     },
 
     "require-dev": {
