--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,6 @@
 
     "require-dev": {
         "phpunit/phpunit": "^4.0",
-        "friendsofphp/php-cs-fixer": "3.3.0",
-        "povils/phpmnd": "2.0.0"
+        "friendsofphp/php-cs-fixer": "3.3.0"
     }
 }
