--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "sebastian/git": "^2.0",
         "sabre/vobject": "~4",
         "jasig/phpcas": "^1.3",
-        "phpoffice/phpexcel": "^1.8",
-        "kranemora/html2text": "^1.0"
+        "phpoffice/phpexcel": "^1.8"
     },
 
     "require-dev": {
