--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "require-dev": {
         "phpunit/phpunit": "^4.0",
         "friendsofphp/php-cs-fixer": "3.3.0",
-        "povils/phpmnd": "2.0.0"
+        "povils/phpmnd": "2.0.0",
+        "rector/rector": "0.12.19"
     }
 }
