--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,6 +30,19 @@ jobs:
     - name: PHP-CS-Fixer
       run: ./vendor/bin/php-cs-fixer fix --diff --dry-run
 
+  rector:
+    needs: validate-composer
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2
+    - uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.1'
+    - run: composer install --prefer-dist --no-progress
+
+    - name: Rector
+      run: ./vendor/bin/rector process --dry-run
+
   var-dump-check:
     needs: validate-composer
     runs-on: ubuntu-18.04
