Ajout d'EditorConfig & RectorPHP (#47)
* Ajout d'editorconfig

* Modification des options de CI

* Ajout de RectorPHP

* Rector sur les controllers

* Rector sur les plugins

* Rector sur les services

* Rector sur les models

* Ajout de règles et passage sur tout le projet

* Rector avec la règle de code mort

* Early return

* Code Quality

* php-cs-fixer

* Ajout de rector en CI

* Fix de la conf. rector

* Suppression d'une règle Early Return qui entrait en conflit avec le reste

* On ne run la CI au push que sur les branches principales (pas evol ni bugfix)

* On enlève la condition sur le type de PR pour la CI

* rector + php cs fixer

* rectification condition rector

Co-authored-by: Valentin Rouxel <valentin.rouxel@atos.net>

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,9 @@
 name: Prevarisc Lint
 
-on: pull_request
+on:
+  pull_request:
+  push:
+    branches: [ 2.5, evol-sdis** ]
 
 jobs:
   validate-composer:
@@ -26,6 +29,19 @@ jobs:
 
     - name: PHP-CS-Fixer
       run: ./vendor/bin/php-cs-fixer fix --diff --dry-run
+
+  rector:
+    needs: validate-composer
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2
+    - uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.1'
+    - run: composer install --prefer-dist --no-progress
+
+    - name: Rector
+      run: ./vendor/bin/rector process --dry-run
 
   var-dump-check:
     needs: validate-composer
