--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "phpunit/phpunit": "^4.0",
         "friendsofphp/php-cs-fixer": "3.3.0",
         "povils/phpmnd": "2.0.0",
-        "rector/rector": "0.12.19"
+        "rector/rector": "0.12.19",
+        "phpstan/phpstan": "~1.4.0"
     }
 }
