--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,8 @@ includes:
 	- phpstan-baseline.neon
 
 parameters:
-    level: 0
+    level: 1
     paths:
         - application
+    scanFiles:
+        - public/index.php
