--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,6 +42,19 @@ jobs:
 
     - name: Rector
       run: ./vendor/bin/rector process --dry-run
+  
+  phpstan:
+    needs: validate-composer
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.1'
+    - run: composer install --prefer-dist --no-progress
+
+    - name: PHPStan
+      run: ./vendor/bin/phpstan analyse
 
   var-dump-check:
     needs: validate-composer
