Retire les fichiers Minify* de l'analyse

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,4 +8,7 @@ parameters:
     scanFiles:
         - public/index.php
     excludePaths:
-        - application/cache
+        analyseAndScan:
+            - application/cache
+        analyse:
+            - application/views/helpers/Minify*
