Correction d'erreurs PHPStan (#84)
* Le paramètre n'était pas bien passé

* Retire les fichiers Minify* de l'analyse

* Même return type que la méthode parente

* Jette une exception si la variable n'est pas définie

* Passage au niveau 2

* Corrections de return type

* Propriété non définie si non assignée

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,10 +2,13 @@ includes:
 	- phpstan-baseline.neon
 
 parameters:
-    level: 1
+    level: 2
     paths:
         - application
     scanFiles:
         - public/index.php
     excludePaths:
-        - application/cache
+        analyseAndScan:
+            - application/cache
+        analyse:
+            - application/views/helpers/Minify*
