--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,10 @@
         "povils/phpmnd": "2.0.0",
         "rector/rector": "0.12.19",
         "phpstan/phpstan": "~1.4.0"
+    },
+
+    "scripts": {
+        "cs-fix": "php vendor/bin/rector && php vendor/bin/php-cs-fixer fix",
+        "analyse": "php vendor/bin/phpstan analyse"
     }
 }
