--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -3331,6 +3331,11 @@ parameters:
 			path: application/controllers/PieceJointeController.php
 
 		-
+			message: "#^Property PlatauController\\:\\:\\$viewRenderer \\(Zend_Controller_Action_Helper_ViewRenderer\\) does not accept Zend_Controller_Action_Helper_Abstract\\.$#"
+			count: 1
+			path: application/controllers/PlatauController.php
+
+		-
 			message: "#^Access to an undefined property Zend_Controller_Action_HelperBroker\\:\\:\\$viewRenderer\\.$#"
 			count: 1
 			path: application/controllers/ProxyController.php
