Vérification de la connexion à Plat'AU en ajax pour ne pas bloquer l'interface

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -3117,7 +3117,12 @@ parameters:
 
 		-
 			message: "#^Access to an undefined property Zend_Controller_Action_HelperBroker\\:\\:\\$layout\\.$#"
-			count: 2
+			count: 3
+			path: application/controllers/IndexController.php
+
+		-
+			message: "#^Access to an undefined property Zend_Controller_Action_HelperBroker\\:\\:\\$viewRenderer\\.$#"
+			count: 1
 			path: application/controllers/IndexController.php
 
 		-
@@ -3147,7 +3152,7 @@ parameters:
 
 		-
 			message: "#^Call to an undefined method Zend_Controller_Action_HelperBroker\\:\\:flashMessenger\\(\\)\\.$#"
-			count: 5
+			count: 4
 			path: application/controllers/IndexController.php
 
 		-
