--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,11 @@
     "scripts": {
         "cs-fix": "/usr/bin/php81 tools/vendor/bin/rector && /usr/bin/php81 tools/vendor/bin/php-cs-fixer fix",
         "analyse": "/usr/bin/php81 tools/vendor/bin/phpstan analyse --memory-limit=-1"
+    },
+
+    "config": {
+        "platform": {
+            "php": "7.1.33"
+        }
     }
 }
