--- a/tools/composer.json
+++ b/tools/composer.json
@@ -3,7 +3,8 @@
         "phpstan/phpstan": "^1.10",
         "phpstan/extension-installer": "^1.3",
         "rector/rector": "^0.17.6",
-        "friendsofphp/php-cs-fixer": "^3.22"
+        "friendsofphp/php-cs-fixer": "^3.22",
+        "povils/phpmnd": "^3.2"
     },
     "config": {
         "allow-plugins": {
