Retrait du test de la CI

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,7 @@ name: Prevarisc Lint
 on:
   pull_request:
   push:
-    branches: [ 2.5, bugfix/phpstan ]
+    branches: [ 2.5 ]
 
 jobs:
   validate-composer:
