--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,18 @@
     },
 
     "require-dev": {
-        "phpunit/phpunit": "^4.0"
+        "phpunit/phpunit": "^7.0"
     },
 
     "scripts": {
         "cs-fix": "/usr/bin/php81 tools/vendor/bin/rector && /usr/bin/php81 tools/vendor/bin/php-cs-fixer fix",
         "analyse": "/usr/bin/php81 tools/vendor/bin/phpstan analyse --memory-limit=-1"
+    },
+
+    "autoload": {
+        "psr-4": {
+            "App\\": "application/"
+        }
     },
 
     "config": {
