--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
 
     "scripts": {
         "cs-fix": "/usr/bin/php81 tools/vendor/bin/rector && /usr/bin/php81 tools/vendor/bin/php-cs-fixer fix",
-        "analyse": "/usr/bin/php81 tools/vendor/bin/phpstan analyse --memory-limit=-1"
+        "analyse": "/usr/bin/php81 tools/vendor/bin/phpstan analyse --memory-limit=-1",
+        "test": "php vendor/bin/phpunit --bootstrap tests/indexTest.php --testdox --coverage-html tests/coverage/ --whitelist application/ tests/"
     },
 
     "autoload": {
