--- a/tools/composer.json
+++ b/tools/composer.json
@@ -4,7 +4,8 @@
         "phpstan/extension-installer": "^1.3",
         "rector/rector": "^0.17.6",
         "friendsofphp/php-cs-fixer": "^3.22",
-        "povils/phpmnd": "^3.2"
+        "povils/phpmnd": "^3.2",
+        "tomasvotruba/class-leak": "^0.1.3"
     },
     "config": {
         "allow-plugins": {
