--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -57,6 +57,19 @@ jobs:
     - name: PHPStan
       run: tools/vendor/bin/phpstan analyse
 
+  phpunit:
+    needs: validate-composer
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: shivammathur/setup-php@v2
+      with:
+        php-version: '7.1'
+    - run: composer install --prefer-dist --no-progress
+
+    - name: PHPUnit
+      run: composer test
+
   var-dump-check:
     needs: validate-composer
     runs-on: ubuntu-latest
