--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -3,13 +3,14 @@ includes:
 
 parameters:
     phpVersion: 70100
-    level: 4
+    level: 5
     paths:
         - application
     scanFiles:
         - public/index.php
     stubFiles:
         - stubs/Zend_Db_Table_Rowset_Abstract.stub
+        - stubs/PHPExcel_Worksheet.stub
     excludePaths:
         analyseAndScan:
             - application/cache
