--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "scripts": {
         "cs-fix": "/usr/bin/php81 tools/vendor/bin/rector && /usr/bin/php81 tools/vendor/bin/php-cs-fixer fix",
         "analyse": "/usr/bin/php81 tools/vendor/bin/phpstan analyse --memory-limit=-1",
+        "generate-baseline": "/usr/bin/php81 tools/vendor/bin/phpstan --generate-baseline",
         "test": "php vendor/bin/phpunit --bootstrap tests/bootstrap/indexTest.php --testdox tests/",
         "test-coverage": "@test --coverage-html tests/coverage/ --whitelist application/"
     },
