Désactive XDebug + cache composer

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,6 +13,7 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.1'
+        coverage: none
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
@@ -25,7 +26,11 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.1'
-    - run: composer install --prefer-dist --no-progress --working-dir=tools/
+        coverage: none
+    - uses: ramsey/composer-install@v2
+      with:
+        composer-options: "--prefer-dist"
+        working-directory: "tools"
 
     - name: PHP-CS-Fixer
       run: tools/vendor/bin/php-cs-fixer fix --diff --dry-run
@@ -38,7 +43,11 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.1'
-    - run: composer install --prefer-dist --no-progress --working-dir=tools/
+        coverage: none
+    - uses: ramsey/composer-install@v2
+      with:
+        composer-options: "--prefer-dist"
+        working-directory: "tools"
 
     - name: Rector
       run: tools/vendor/bin/rector process --dry-run
@@ -51,8 +60,14 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.1'
-    - run: composer install --prefer-dist --no-progress
-    - run: composer install --prefer-dist --no-progress --working-dir=tools/
+        coverage: none
+    - uses: ramsey/composer-install@v2
+      with:
+        composer-options: "--prefer-dist"
+    - uses: ramsey/composer-install@v2
+      with:
+        composer-options: "--prefer-dist"
+        working-directory: "tools"
 
     - name: PHPStan
       run: tools/vendor/bin/phpstan analyse
@@ -65,7 +80,10 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '7.1'
-    - run: composer install --prefer-dist --no-progress
+        coverage: none
+    - uses: ramsey/composer-install@v2
+      with:
+        composer-options: "--prefer-dist"
 
     - name: PHPUnit
       run: composer test
@@ -78,6 +96,7 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '7.1'
+        coverage: none
 
     - name: Normal VarDump Check
       uses: umutphp/php-var-dump-check-action@v2
@@ -101,7 +120,11 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.1'
-    - run: composer install --prefer-dist --no-progress --working-dir=tools/
+        coverage: none
+    - uses: ramsey/composer-install@v2
+      with:
+        composer-options: "--prefer-dist"
+        working-directory: "tools"
 
     - name: Magical Number Check
       run: tools/vendor/bin/phpmnd $GITHUB_WORKSPACE/application --extensions=-switch_case --ignore-numbers=-1
