--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         php-version: '8.1'
         coverage: none
-    - uses: ramsey/composer-install@v2
+    - uses: ramsey/composer-install@v3
       with:
         composer-options: "--prefer-dist"
         working-directory: "tools"
@@ -44,10 +44,13 @@ jobs:
       with:
         php-version: '8.1'
         coverage: none
-    - uses: ramsey/composer-install@v2
+    - uses: ramsey/composer-install@v3
       with:
         composer-options: "--prefer-dist"
         working-directory: "tools"
+
+    - name: Load custom rules
+      run: composer dump-autoload
 
     - name: Rector
       run: tools/vendor/bin/rector process --dry-run
@@ -61,10 +64,10 @@ jobs:
       with:
         php-version: '8.1'
         coverage: none
-    - uses: ramsey/composer-install@v2
+    - uses: ramsey/composer-install@v3
       with:
         composer-options: "--prefer-dist"
-    - uses: ramsey/composer-install@v2
+    - uses: ramsey/composer-install@v3
       with:
         composer-options: "--prefer-dist"
         working-directory: "tools"
@@ -81,7 +84,7 @@ jobs:
       with:
         php-version: '7.1'
         coverage: none
-    - uses: ramsey/composer-install@v2
+    - uses: ramsey/composer-install@v3
       with:
         composer-options: "--prefer-dist"
 
@@ -121,7 +124,7 @@ jobs:
       with:
         php-version: '8.1'
         coverage: none
-    - uses: ramsey/composer-install@v2
+    - uses: ramsey/composer-install@v3
       with:
         composer-options: "--prefer-dist"
         working-directory: "tools"
