--- a/tools/composer.json
+++ b/tools/composer.json
@@ -11,5 +11,11 @@
         "allow-plugins": {
             "phpstan/extension-installer": true
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Utils\\Rector\\": "utils/rector/src",
+            "Utils\\Rector\\Tests\\": "utils/rector/tests"
+        }
     }
 }
