--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,10 @@
     "autoload-dev": {
         "files": [
             "utils/rector/src/Rector/DynamicViewPropertyToAssignRector.php"
-        ]
+        ],
+        "psr-4": {
+            "Utils\\Rector\\": "utils/rector/src",
+            "Utils\\Rector\\Tests\\": "utils/rector/tests"
+        }
     }
 }
