Peut-être qu'il faut que le chemin soit relatif ?

--- a/tools/composer.json
+++ b/tools/composer.json
@@ -11,5 +11,10 @@
         "allow-plugins": {
             "phpstan/extension-installer": true
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Utils\\Rector\\": "utils/rector/src"
+        }
     }
 }
