--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,13 @@
 {
     "name": "sdis62/prevarisc",
-
     "description": "Application web open-source gérant l'ensemble de l'activité du service prévention au sein d'un SDIS.",
-
     "keywords": [
         "sdis62",
         "prevarisc",
         "prevention"
     ],
-
     "homepage": "https://github.com/SDIS62/prevarisc",
-
     "license": "CECILL-B",
-
     "require": {
         "php": "^7.0",
         "zendframework/zendframework1": "^1.0",
@@ -25,19 +20,17 @@
         "jasig/phpcas": "~1.4.0",
         "phpoffice/phpexcel": "^1.8"
     },
-
     "require-dev": {
         "phpunit/phpunit": "^7.0"
     },
-
     "scripts": {
+        "cs-check": "/usr/bin/php81 tools/vendor/bin/rector --dry-run && /usr/bin/php81 tools/vendor/bin/php-cs-fixer fix --dry-run",
         "cs-fix": "/usr/bin/php81 tools/vendor/bin/rector && /usr/bin/php81 tools/vendor/bin/php-cs-fixer fix",
         "analyse": "/usr/bin/php81 tools/vendor/bin/phpstan analyse --memory-limit=-1",
-        "generate-baseline": "/usr/bin/php81 tools/vendor/bin/phpstan --generate-baseline",
+        "generate-baseline": "/usr/bin/php81 tools/vendor/bin/phpstan --memory-limit=-1 --generate-baseline",
         "test": "php vendor/bin/phpunit --bootstrap tests/bootstrap/indexTest.php --testdox tests/",
         "test-coverage": "@test --coverage-html tests/coverage/ --whitelist application/"
     },
-
     "config": {
         "platform": {
             "php": "7.1.33"
