--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -627,7 +627,7 @@ parameters:
 
 		-
 			message: "#^Call to an undefined method Zend_View_Interface\\:\\:inlineScript\\(\\)\\.$#"
-			count: 17
+			count: 18
 			path: application/controllers/DossierController.php
 
 		-
@@ -1856,6 +1856,11 @@ parameters:
 			path: application/services/Changement.php
 
 		-
+			message: "#^Access to an undefined property Zend_Db_Table_Row_Abstract\\:\\:\\$DATE_LEVEE\\.$#"
+			count: 1
+			path: application/services/Dossier.php
+
+		-
 			message: "#^Access to an undefined property Zend_Db_Table_Row_Abstract\\:\\:\\$ID_ARTICLE\\.$#"
 			count: 7
 			path: application/services/Dossier.php
@@ -1888,6 +1893,11 @@ parameters:
 		-
 			message: "#^Access to an undefined property Zend_Db_Table_Row_Abstract\\:\\:\\$ID_TEXTESAPPL\\.$#"
 			count: 2
+			path: application/services/Dossier.php
+
+		-
+			message: "#^Access to an undefined property Zend_Db_Table_Row_Abstract\\:\\:\\$JUSTIFICATIF_LEVEE\\.$#"
+			count: 1
 			path: application/services/Dossier.php
 
 		-
