fix(chore): maj du workflow avec develop

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,7 +3,9 @@ name: Prevarisc Lint
 on:
   pull_request:
   push:
-    branches: [ 2.5 ]
+    branches:
+      - master
+      - develop
 
 jobs:
   validate-composer:
