--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1861,6 +1861,11 @@ parameters:
 			path: application/services/Dossier.php
 
 		-
+			message: "#^Access to an undefined property Zend_Db_Table_Row_Abstract\\:\\:\\$Reprise\\.$#"
+			count: 1
+			path: application/services/Dossier.php
+
+		-
 			message: "#^Access to an undefined property Zend_Db_Table_Row_Abstract\\:\\:\\$ID_ARTICLE\\.$#"
 			count: 7
 			path: application/services/Dossier.php
